CSS fixes including pushing down the enter div when publish form appears, scrollbar colours

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -24,7 +24,7 @@
 html {
 	overflow: hidden;
 }
-html, body, #container {
+html, body {
 	height: 100vh;
 }
 #splash {
@@ -112,7 +112,7 @@ body {
 	font-family: "PP Woodland Ultralight";
 	margin-bottom: 40vh;
 	line-height: 1.5em;
-	font-weight: 800 !important;
+	font-weight: 800;
 	background: #b2d4fe;
 }
 #container {
@@ -128,20 +128,20 @@ body {
 #space {
 	position: fixed;
 	bottom: 0;
-	width: 100vw;
+	width: 100%;
 	left: 0;
 	padding: 1em;
 	height: 40vh;
 	background: #e5cdfe;
 	div.enter {
-		height: 20vh;
-		width: 90%;
-		line-height: 1.25em;
-		overflow: auto;
+    height: 17.5vh;
+    width: 90%;
+    line-height: 1.25em;
+    overflow: auto;
     position: absolute;
     overflow-y: auto;
     top: 0;
-		margin-top: 3rem;
+    margin-top: 8vh;
 	}
 }
 span.word {
@@ -267,16 +267,17 @@ div.footer-buttons {
 	}
 	#container {
 		width: 50vw;
+		height: 100vh
 	}
 	#space {
 		top: 0;
 		width: 50vw;
 		left: 50vw;
-		min-height: 100vh;
+		height: 100vh;
 		div.enter {
-			height: 70vh;
-			width: 48.5vw;
-			margin-top: 10rem;			
+			height: 65vh;
+			width: 92.5%;
+			margin-top: 12.5vh;		
 		}
 	}
 	div.footer-buttons {
@@ -290,10 +291,21 @@ div.footer-buttons {
 	#space {
 		height: calc(env(safe-area-inset-bottom) + 40vh);
 	}
+	#space .enter.send-request {
+		margin-top: 6rem;
+    height: 12.5vh;
+	}	
+	#container {
+		height: 60vh
+	}
 }
 @media screen and (orientation:landscape) and (max-width: 767px) {
 	#space {
 		height: calc(env(safe-area-inset-bottom) + 50vh);
+	}
+	#space .enter.send-request {
+		height: 62.5vh;
+    margin-top: 17.5vh;
 	}
 }
 .monospace {
@@ -319,4 +331,14 @@ div.save {
 		border-radius: 5px;
 		padding: 10px;
 	}
+}
+::-webkit-scrollbar {
+	width: 12px;
+}
+
+::-webkit-scrollbar-thumb {
+	border-radius: 10px;
+	background: #d086af;
+	-webkit-box-shadow: inset 0 0 6px rgba(#ff41a9, 0.9); 
+	box-shadow: inset 0 0 6px rgba(#ff41a9,0.9); 
 }
